force-app/main/default/objects/Transition_Support__c/Transition_Support__c.object-meta.xml
<CustomObject>
    <label>Transition Support</label>
    <nameField>
        <displayFormat>TRN-{0000}</displayFormat>
        <label>Transition Support ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transition Supports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>