force-app/main/default/objects/Transition_Support__c/fields/Child_Database__c.field-meta.xml
<CustomField>
    <fullName>Child_Database__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child</label>
    <referenceTo>Child__c</referenceTo>
    <relationshipLabel>Transition Supports</relationshipLabel>
    <relationshipName>Transition_Supports</relationshipName>
    <type>Lookup</type>
</CustomField>