force-app/main/default/objects/Transition_Support__c/fields/Current_Education_Level__c.field-meta.xml
<CustomField>
    <fullName>Current_Education_Level__c</fullName>
    <label>Current Education Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>Higher Education</fullName>
            </value>
            <value>
                <fullName>Vocational Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>