force-app/main/default/objects/Transition_Support__c/fields/Current_Financial_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Financial_Status__c</fullName>
    <label>Current Financial Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>