force-app/main/default/objects/Transition_Support__c/fields/Disbursement_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_Schedule__c</fullName>
    <label>Disbursement Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lump-Sum</fullName>
            </value>
            <value>
                <fullName>Recurring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>