force-app/main/default/objects/Transition_Support__c/fields/Education_Plan_ID__c.field-meta.xml
<CustomField>
    <fullName>Education_Plan_ID__c</fullName>
    <displayFormat>EDU-{0000}</displayFormat>
    <label>Education Plan ID</label>
    <type>AutoNumber</type>
</CustomField>