force-app/main/default/objects/Transition_Support__c/fields/Education_Support_Services_Required__c.field-meta.xml
<CustomField>
    <fullName>Education_Support_Services_Required__c</fullName>
    <label>Education Support Services Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>