force-app/main/default/objects/Transition_Support__c/fields/Field_of_Study_Major__c.field-meta.xml
<CustomField>
    <fullName>Field_of_Study_Major__c</fullName>
    <label>Field of Study / Major</label>
    <length>255</length>
    <type>Text</type>
</CustomField>