force-app/main/default/objects/Transition_Support__c/fields/Financial_Assistance_ID__c.field-meta.xml
<CustomField>
    <fullName>Financial_Assistance_ID__c</fullName>
    <displayFormat>FA - {0000}</displayFormat>
    <label>Financial Assistance ID</label>
    <type>AutoNumber</type>
</CustomField>