force-app/main/default/objects/Transition_Support__c/fields/Housing_Arrangement_ID__c.field-meta.xml
<CustomField>
    <fullName>Housing_Arrangement_ID__c</fullName>
    <displayFormat>HA-{0000}</displayFormat>
    <label>Housing Arrangement ID</label>
    <type>AutoNumber</type>
</CustomField>