force-app/main/default/objects/Transition_Support__c/fields/Housing_Assistance_Required__c.field-meta.xml
<CustomField>
    <fullName>Housing_Assistance_Required__c</fullName>
    <label>Housing Assistance Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>