force-app/main/default/objects/Transition_Support__c/fields/Mode_of_Study__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Study__c</fullName>
    <label>Mode of Study</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>On-campus</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>