force-app/main/default/objects/Transition_Support__c/fields/Plan_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Plan_Review_Date__c</fullName>
    <label>Plan Review Date</label>
    <type>Date</type>
</CustomField>