force-app/main/default/objects/Transition_Support__c/fields/Purpose_of_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Assistance__c</fullName>
    <label>Purpose of Assistance</label>
    <type>TextArea</type>
</CustomField>