force-app/main/default/objects/Transition_Support__c/fields/Rent_Covered_by__c.field-meta.xml
<CustomField>
    <fullName>Rent_Covered_by__c</fullName>
    <label>Rent Covered by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Foster Parent</fullName>
            </value>
            <value>
                <fullName>NGO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>