force-app/main/default/objects/Transition_Support__c/fields/Scholarship_Status__c.field-meta.xml
<CustomField>
    <fullName>Scholarship_Status__c</fullName>
    <label>Scholarship Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>