force-app/main/default/objects/Transition_Support__c/fields/Source_Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Program_Name__c</fullName>
    <label>Source/Program Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>