force-app/main/default/objects/Transition_Support__c/fields/Training_Institution_Name__c.field-meta.xml
<CustomField>
    <fullName>Training_Institution_Name__c</fullName>
    <label>Training Institution Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>