force-app/main/default/objects/Transition_Support__c/fields/Transition_Goals__c.field-meta.xml
<CustomField>
    <fullName>Transition_Goals__c</fullName>
    <label>Transition Goals</label>
    <length>255</length>
    <type>Text</type>
</CustomField>