force-app/main/default/objects/Transition_Support__c/fields/Type_of_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Assistance__c</fullName>
    <label>Type of Assistance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Housing</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Basic Needs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>