force-app/main/default/objects/Transition_Support__c/fields/Type_of_Training__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Training__c</fullName>
    <label>Type of Training</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Skill-Based</fullName>
            </value>
            <value>
                <fullName>Internship</fullName>
            </value>
            <value>
                <fullName>Career Guidance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>