force-app/main/default/objects/Transition_Support__c/recordTypes/Education_Training_Plan.recordType-meta.xml
<RecordType>
    <fullName>Education_Training_Plan</fullName>
    <active>true</active>
    <label>Education &amp; Training Plan</label>
</RecordType>