force-app/main/default/objects/Transition_Support__c/recordTypes/Housing_Living_Arrangements.recordType-meta.xml
<RecordType>
    <fullName>Housing_Living_Arrangements</fullName>
    <active>true</active>
    <label>Housing &amp; Living Arrangements</label>
</RecordType>